[gd_scene load_steps=6 format=3 uid="uid://dlep6nhtm35ra"]

[ext_resource type="Script" path="res://src/scenes/settings.gd" id="1_qokvt"]

[sub_resource type="InputEventKey" id="InputEventKey_kdnxp"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_d40p4"]
events = [SubResource("InputEventKey_kdnxp")]

[sub_resource type="InputEventKey" id="InputEventKey_6ychj"]
device = -1
ctrl_pressed = true
keycode = 83

[sub_resource type="Shortcut" id="Shortcut_036la"]
events = [SubResource("InputEventKey_6ychj")]

[node name="Settings" type="Window"]
initial_position = 2
size = Vector2i(540, 660)
transient = true
unresizable = true
popup_window = true
script = ExtResource("1_qokvt")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 528.0
offset_bottom = 648.0
theme_type_variation = &"BigSpacing"
alignment = 2

[node name="Header" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Content" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="Control/VBoxContainer/Content"]
layout_mode = 2
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="Control/VBoxContainer/Content/Control"]
layout_mode = 2
offset_left = 30.0
offset_right = 486.0
offset_bottom = 549.0
columns = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/Content/Control/GridContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Your name"
vertical_alignment = 1

[node name="YourName" type="LineEdit" parent="Control/VBoxContainer/Content/Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "You"
caret_blink = true
caret_blink_interval = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Cancel" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
shortcut = SubResource("Shortcut_d40p4")
text = "Cancel"

[node name="Apply" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
shortcut = SubResource("Shortcut_036la")
text = "Apply"

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Apply" to="." method="_on_apply_pressed"]
